<resources>
    <string name="Wednsday">周三</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acceptProtocol">已经阅读接受协议</string>
    <string name="addplansuccess">添加训练计划成功</string>
    <string name="address">地址</string>
    <string name="adduser">请添加训练用户</string>
    <string name="age">年龄：</string>
    <string name="anmo">按摩</string>
    <string name="anmomoshi">按摩模式</string>
    <string name="anmozhouqi">按摩周期</string>
    <string name="anmozhouqigap">按摩周期必须介于1到%1$d之间</string>
    <string name="app_name">X EMS PRO</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="autologin">自动登录</string>
    <string name="avragestrength">平均最高强度</string>
    <string name="beibu">"背部
(背阔)"</string>
    <string name="bibu">臀部</string>
    <string name="birthday">生日</string>
    <string name="bluetooth_connect_failed">蓝牙设备连接失败</string>
    <string name="bluetooth_device">蓝牙设备</string>
    <string name="bodydata">体质数据</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="calendarreject">拒绝操作日历，将导致日历事项无法提醒</string>
    <string name="camera">相机</string>
    <string name="cancel">取消</string>
    <string name="changeLogo">更换Logo：</string>
    <string name="changeLogoText">更换Logo</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="city">城市</string>
    <string name="communicationfailed">通信失败</string>
    <string name="connect_failed">连接失败</string>
    <string name="count">次</string>
    <string name="customerdata">客户数据</string>
    <string name="customerrecorddata">客户训练记录</string>
    <string name="date">日期</string>
    <string name="day">天</string>
    <string name="defaultLogoText">默认Logo</string>
    <string name="delete">删除</string>
    <string name="denyWriteSetting">拒绝写入系统设置将导致一些操作无法生效</string>
    <string name="editmode">编辑模式</string>
    <string name="editparameter">默认模式</string>
    <string name="email">邮箱</string>
    <string name="exisitprogram">该事件点已经有训练计划了</string>
    <string name="existTime">训练时间</string>
    <string name="firmwareVersion">固件版本：</string>
    <string name="format_date_no_year">yyyy年MM月dd日</string>
    <string name="format_date_no_year2">%1$d年%2$d月%3$d日</string>
    <string name="format_date_no_year3">yyyy年MM月</string>
    <string name="format_time_hour_minute">%1$s:%2$s</string>
    <string name="foundVersion">发现新版本：V%1$s,是否更新？</string>
    <string name="frequenceerror">频率必须大于0小于100hz</string>
    <string name="frequency">频率</string>
    <string name="frequencygap">频率必须介于1到%1$d之间</string>
    <string name="frequencytext">频率</string>
    <string name="friday">周五</string>
    <string name="fubu">腹部</string>
    <string name="hardwareVersion">硬件版本：</string>
    <string name="height">身高</string>
    <string name="height2">身高(cm)</string>
    <string name="height3">身高：</string>
    <string name="heightValue">%1$dcm</string>
    <string name="hint">提示</string>
    <string name="hour">时</string>
    <string name="houxiefangji">"后斜方肌
(上背)"</string>
    <string name="id">ID</string>
    <string name="inputerror">输入错误</string>
    <string name="inputoutputramperror">inputramp和outputramp之和必须小于脉冲持续</string>
    <string name="inputramp">输入阶梯</string>
    <string name="inputramperror">inputramp必须大于1小于100</string>
    <string name="inputworktimelengtherror">工作时间必须大于1分钟小于99分钟</string>
    <string name="lightValue">%1$d</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_loading">正在加载...</string>
    <string name="loading_default_messsage">Please wait…</string>
    <string name="loading_done">加载完成</string>
    <string name="location_permission_error">申请位置权限失败，将导致蓝牙无法通信，请在设置中打开位置权限</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="maValue">%1$d mA</string>
    <string name="maikuan">脉宽</string>
    <string name="maikuangap">脉宽必须介于1到%1$d之间</string>
    <string name="maincontrol">主控端</string>
    <string name="maxbodystrenth">最大部位强度</string>
    <string name="maxlength">最高时长</string>
    <string name="minbodystrenth">最小部位强度</string>
    <string name="minute">分</string>
    <string name="monday">周一</string>
    <string name="moshi">模式</string>
    <string name="multi_mod">无线模式</string>
    <string name="muscleexist">肌肉训练</string>
    <string name="name">姓名</string>
    <string name="namecannotempty">名字不能为空</string>
    <string name="nan">男</string>
    <string name="network_error">网络异常</string>
    <string name="network_error2">网络异常,请联网后再上传头像</string>
    <string name="no_url">播放地址无效</string>
    <string name="nomore_loading">没有了</string>
    <string name="nv">女</string>
    <string name="ok">OK</string>
    <string name="outputramp">输出阶梯</string>
    <string name="outputramperror">outputramp必须大于1小于100</string>
    <string name="password">密码</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="passwordnull">密码不能为空</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="paulsecontinue">脉冲持续</string>
    <string name="paulsecontinuegap">脉冲持续必须介于1到%1$d之间</string>
    <string name="paulsestop">脉冲暂停</string>
    <string name="paulsestopgap">脉冲暂停必须介于1到%1$d之间</string>
    <string name="permission_btn_next">Next</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_denied">We need access to %1$s,otherwise, you will not be able to use %2$s</string>
    <string name="permission_denied_with_naac">"Because %1$s cannot use %2$s,Can not run normally,Please open permissions before using.

Setup path: Apps->%3$s->Permissions"</string>
    <string name="permission_dialog_msg">For your normal use %s, you need the following permissions</string>
    <string name="permission_dialog_title">Start %s</string>
    <string name="permission_ensure">Enter</string>
    <string name="permission_go_to_setting">Go to Setting</string>
    <string name="permission_location">Location</string>
    <string name="permission_reject">Deny</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_title">Please allow access to %s</string>
    <string name="phone">手机</string>
    <string name="photoablum">图库</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="plantitle">训练计划</string>
    <string name="plausecontinueerror">脉冲持续时间必须大于0小于60s</string>
    <string name="plausestoperror">脉冲暂停时间必须大于0小于60s</string>
    <string name="pleaseTakepicture">请先给用户拍照</string>
    <string name="pleaseaddress">请填写地址</string>
    <string name="pleasebirthday">请填写生日</string>
    <string name="pleasecity">请填写城市</string>
    <string name="pleaseemail">请填写用户邮箱</string>
    <string name="pleaseheight">请填写身高</string>
    <string name="pleaseid">请填写用户ID</string>
    <string name="pleaseinputname">请输入名字</string>
    <string name="pleasephone">请填写手机号码</string>
    <string name="pleaseprotocol">请同意注册协议</string>
    <string name="pleaseselectprogram">请选择训练计划</string>
    <string name="pleasesex">请填写性别</string>
    <string name="pleaseusername">请填写用户名字</string>
    <string name="pleaseweight">请填写体重</string>
    <string name="project">项目</string>
    <string name="recycler_swipe_click_load_more">Click to load more</string>
    <string name="recycler_swipe_data_empty">There is no data</string>
    <string name="recycler_swipe_load_error">Error, please try again</string>
    <string name="recycler_swipe_load_more_message">Loading, please wait later</string>
    <string name="recycler_swipe_more_not">No more data</string>
    <string name="refresh_done">刷新完成</string>
    <string name="refreshing">正在刷新...</string>
    <string name="registertime">注册时间</string>
    <string name="rememberpassword">记住密码</string>
    <string name="save">保存</string>
    <string name="selectprogram1">所选程序</string>
    <string name="sex">性别</string>
    <string name="sure">确定</string>
    <string name="train_program">训练程序</string>
    <string name="username">用户名</string>
    <string name="weight3">体重(kg)</string>
</resources>