<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/clear_color" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0dip" android:textColor="@color/light_black_color" android:gravity="center" android:background="@color/mainColor" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:text="@string/date" android:layout_weight="1.0" />
    <TextView android:textSize="20.0dip" android:textColor="@color/light_black_color" android:gravity="center" android:id="@id/idprogram" android:background="@color/mainColor" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:text="@string/selectprogram1" android:layout_weight="1.0" />
    <TextView android:textSize="20.0dip" android:textColor="@color/light_black_color" android:gravity="center" android:background="@color/mainColor" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:text="@string/avragestrength" android:layout_weight="1.0" />
    <TextView android:textSize="20.0dip" android:textColor="@color/light_black_color" android:gravity="center" android:background="@color/mainColor" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:text="@string/frequency" android:layout_weight="1.0" />
    <TextView android:textSize="20.0dip" android:textColor="@color/light_black_color" android:gravity="center" android:background="@color/mainColor" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:text="@string/maikuan" android:layout_weight="1.0" />
    <TextView android:textSize="20.0dip" android:textColor="@color/light_black_color" android:gravity="center" android:background="@color/mainColor" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/maxlength" android:layout_weight="1.0" />
</LinearLayout>