<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/light_gray_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="50.0dip" android:layout_marginTop="25.0dip">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/userIcon" android:layout_width="200.0dip" android:layout_height="200.0dip" android:src="@color/gray_color" android:layout_centerInParent="true" />
            <ImageView android:id="@id/cameraIcon" android:background="@mipmap/camera" android:clickable="false" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_centerInParent="true" />
        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/rightLayout" android:background="@color/white_color" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="35.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="50.0dip">
            <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="20.0dip" android:text="@string/customerdata" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="50.0dip">
                <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
                <com.isaigu.gymapp.widget.LineEditText android:id="@id/name" android:background="@null" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/name" android:singleLine="true" android:layout_weight="1.0" />
                <com.isaigu.gymapp.widget.LineEditText android:id="@id/email" android:background="@null" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/email" android:singleLine="true" android:layout_weight="1.0" />
                <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
                <com.isaigu.gymapp.widget.LineEditText android:id="@id/id" android:background="@null" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/id" android:singleLine="true" android:layout_weight="1.0" />
                <com.isaigu.gymapp.widget.LineEditText android:id="@id/phone" android:background="@null" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/phone" android:singleLine="true" android:layout_weight="1.0" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="50.0dip">
                <com.isaigu.gymapp.widget.LineEditText android:id="@id/city" android:background="@null" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/city" android:singleLine="true" android:layout_weight="1.0" />
                <com.isaigu.gymapp.widget.LineEditText android:id="@id/address" android:background="@null" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/address" android:singleLine="true" android:layout_weight="2.0" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/bodydata" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip">
                        <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
                        <TextView android:textSize="18.0sp" android:id="@id/sex" android:background="@drawable/underline_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/sex" android:layout_weight="1.0" />
                        <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
                        <com.isaigu.gymapp.widget.LineEditText android:id="@id/height" android:background="@null" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/height2" android:singleLine="true" android:layout_weight="1.0" android:inputType="number" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip">
                        <TextView android:textSize="18.0sp" android:id="@id/birtyday" android:background="@drawable/underline_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/birthday" android:layout_weight="1.0" />
                        <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
                        <com.isaigu.gymapp.widget.LineEditText android:id="@id/weight" android:background="@null" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/weight3" android:singleLine="true" android:layout_weight="1.0" android:inputType="numberDecimal" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:paddingLeft="30.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/train_program" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="10.0dip">
                        <Button android:textSize="20.0sp" android:gravity="center|left" android:id="@id/programdatabutton" android:background="@drawable/bg_hollow_rectangle" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textAllCaps="false" />
                        <ImageView android:background="@mipmap/search" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="20.0dip" android:layout_alignRight="@id/programdatabutton" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout android:background="@drawable/bg_hollow_rectangle" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="120.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="10.0dip">
                <TextView android:textSize="18.0sp" android:id="@id/protocolContent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:singleLine="false" />
            </RelativeLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="5.0dip">
                <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
                <android.support.v7.widget.AppCompatCheckBox android:textSize="16.0sp" android:id="@id/admitProtocol" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/acceptProtocol" />
            </LinearLayout>
        </LinearLayout>
        <com.isaigu.gymapp.widget.MyButton android:textSize="45.0sp" android:textColor="@color/white_color" android:id="@id/close" android:background="@drawable/black_button_drawable_r35" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:text="x" android:layout_alignParentRight="true" />
        <com.isaigu.gymapp.widget.MyButton android:textSize="22.0sp" android:layout_gravity="center" android:id="@id/save" android:background="@drawable/black_button_drawable_r30" android:layout_width="180.0dip" android:layout_height="60.0dip" android:layout_marginBottom="20.0dip" android:text="@string/save" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>