<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/layout" android:background="@drawable/shape_dialog_corner" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:background="@drawable/shape_dialog_corner_blackcolor" android:layout_width="fill_parent" android:layout_height="40.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white_color" android:gravity="center" android:id="@id/titleTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="" />
        <LinearLayout android:orientation="horizontal" android:id="@id/optionspicker" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="40.0dip" android:layout_below="@id/titleTextView" android:layout_centerInParent="true">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/project" />
                <com.contrarywind.view.WheelView android:id="@id/options1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5">
                <TextView android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/hour" />
                <com.contrarywind.view.WheelView android:id="@id/options2" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5">
                <TextView android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/minute" />
                <com.contrarywind.view.WheelView android:id="@id/options3" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <com.isaigu.gymapp.widget.MyButton android:textSize="16.0sp" android:id="@id/sureButton" android:background="@drawable/black_button_drawable_r30" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="-30.0dip" android:text="@string/sure" android:layout_below="@id/layout" android:layout_centerHorizontal="true" />
</RelativeLayout>