<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:background="@mipmap/background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
    <ImageView android:id="@id/logoImage1" android:visibility="gone" android:layout_width="200.0dip" android:layout_height="76.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:src="@mipmap/logo2" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <ImageView android:id="@id/logoImage" android:visibility="gone" android:layout_width="262.0dip" android:layout_height="100.0dip" android:layout_marginLeft="80.0dip" android:src="@mipmap/logo2" android:scaleType="centerCrop" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/shape_dialog_corner_transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.8">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ImageView android:background="@mipmap/people" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.1" />
                <EditText android:id="@id/username" android:background="@drawable/round_circle_drawable_r20_white" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="50.0dip" android:hint="@string/username" android:layout_weight="3.0" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ImageView android:background="@mipmap/lock" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.1" />
                <EditText android:id="@id/password" android:background="@drawable/round_circle_drawable_r20_white" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="50.0dip" android:hint="@string/password" android:layout_weight="3.0" android:inputType="textPassword" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <android.support.v7.widget.AppCompatCheckBox android:id="@id/rememberpassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rememberpassword" android:layout_weight="0.8" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.3" />
                <android.support.v7.widget.AppCompatCheckBox android:id="@id/autologin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/autologin" android:layout_weight="0.8" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.5" />
            </LinearLayout>
            <com.isaigu.gymapp.widget.MyButton android:textSize="20.0sp" android:textColor="@color/white_color" android:id="@id/login" android:background="@drawable/red_button_drawable_r35" android:layout_width="240.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="40.0dip" android:text="@string/login" android:textAllCaps="false" />
        </LinearLayout>
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.8" />
    </LinearLayout>
</RelativeLayout>